--- a/.build.yml
+++ b/.build.yml
@@ -13,9 +13,8 @@ tasks:
 - build: |
     cd uxn11
     ./build.sh --norun
-    mv bin ../bin
 - upload: |
-    tar -czf out.tar.gz bin
+    tar -czf out.tar.gz uxn11/bin
     acurl() {
         set +x
         curl -H "Authorization: Bearer ${OAUTH2_TOKEN}" "${@}"
